# Netbox_Demo

./: README.md  pyproject.toml
netbox_demo/: __init__.py  choices.py  navigation.py  urls.py
netbox_demo.egg-info/: PKG-INFO  SOURCES.txt
netbox_demo/api/: serializers.py  urls.py
netbox_demo/api/serializers/: __init__.py  accesslist.py  nested.py
netbox_demo/api/views/: accesslist.py
netbox_demo/filtersets/: accesslist.py
netbox_demo/forms/: __init__.py  accesslist.py
netbox_demo/forms/filtersets/: accesslist.py
netbox_demo/migrations/: 0001_initial.py
netbox_demo/models/: accesslist.py
netbox_demo/tables/: accesslist.py
netbox_demo/templates/netbox_demo/: accesslist.html
netbox_demo/views/: accesslist.py
